--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -137,7 +137,7 @@
 	.xui-exchange-form .xui-exchange-confirm,.xui-exchange-form .xui-exchange-abolish{
 		margin-top: 20px;
 		display: inline-block;
-		width: 60%;
+		width: 90%;
 		height: 50px;
 		line-height: 50px;
 		text-align: center;
@@ -256,7 +256,8 @@
 		text-align: center;
 		border: none;
 		border-radius: 2px;
-		height: 2em;
+		height: 2.5em;
+		font-size: 0.9rem;
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btn-abolish{
 		margin-left: 5px;
@@ -275,33 +276,28 @@
 			<p>现有积分：<span class="xa-current-integral">{{member_integral}}</span></p>
 		</div>
 		<form action="post" class="xui-exchange-form">
+			{% if card_exchange_rule.is_bind %}
 			<div class="xui-form-control">
 				<label for="phone"><b></b>输入手机号：</label>
 				<div class="xui-bg">
-					{% if card_exchange_rule.is_bind %}
 						{% if member_is_bind %}
 						<input type="tel" value="{{phone_number}}" disabled/>
 						{% else %}
 						<input class="xui-exchange-tel xa-phoneNum" maxlength="11" type="tel" id="phone"/>
 						<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>
-						{% endif %}
-					{% endif%}
+					    <p class="xui-help-block">绑定手机号才能把奖励发到你的帐户里哦～</p>
+					{% endif %}
 					<!--<input class="xui-exchange-tel xa-phoneNum" type="tel" id="phone"/>-->
 					<!--<button class="xui-btnCode xa-getCode" type="button">获取验证码</button>-->
-					<p class="xui-help-block">绑定手机号才能把奖励发到你的帐户里哦～</p>
+
 				</div>
 			</div>
+			{% endif%}
 			<div class="xui-form-control">
 				<label><b></b>选择兑换：</label>
 				<div class="xui-bg">
 					{% for prize in card_exchange_rule.prize %}
-					{% if user_has_exchange_card %}
-					<div class="xui-exchange-choose xa-exchange-choose active" data-start="{{prize.s_num}}" data-end="{{prize.end_num}}">
-						兑<span>¥</span><span class="xui-exchange-money xa-exchange-money">{{prize.money}}</span>
-						<p>消耗<span class='xa-integral'>{{prize.integral}}</span>积分</p>
-					</div>
-					{% else %}
-					<div class="xui-exchange-choose xa-exchange-choose" data-start="{{prize.s_num}}" data-end="{{prize.end_num}}">
+					<div class="xui-exchange-choose xa-exchange-choose {% if prize.is_selected %} active {% endif %}" data-start="{{prize.s_num}}" data-end="{{prize.end_num}}">
 						兑<span>¥</span><span class="xui-exchange-money xa-exchange-money">{{prize.money}}</span>
 						<p>消耗<span class='xa-integral'>{{prize.integral}}</span>积分</p>
 						{% if prize.count == 0 %}
@@ -310,12 +306,11 @@
 						</div>
 						{% endif %}
 					</div>
-					{% endif %}
 					{% endfor %}
 				</div>
 			</div>
 			<div class="xui-form-control xui-submit-btn">
-				<a class="xui-exchange-confirm xa-exchange-submit">{% if user_has_exchange_card %}已兑换{% else %}兑换{% endif %}</a>
+				<a class="xui-exchange-confirm xa-exchange-submit" data-bind="{{member_is_bind}}">{% if user_has_exchange_card %}已兑换{% else %}兑换{% endif %}</a>
 				<!--<a class="xui-exchange-abolish">取消</a>-->
 			</div>
 		</form>
@@ -454,7 +449,9 @@
 		});
 		$(".xa-exchange-submit").click(function(){
 			var text = $(this).text();
-			if($('.xa-exchange-choose').hasClass('active') && text != '已兑换'){
+			var isBind=$('xa-exchange-submit').attr('data-bind');
+//			if(isBind){
+				if($('.xa-exchange-choose').hasClass('active') && text != '已兑换'){
 				var current_integral=$('.xa-current-integral').text();
 				var need_integral=$('.xa-exchange-choose.active .xa-integral').text();
 				var start_num=$('.xa-exchange-choose.active').attr('data-start');
@@ -488,15 +485,23 @@
 							})
 						}
 					});
-				}else{
-					$('body').alert({
-						isShow: true,
-						info: '没有足够的积分',
-						isSlide: true,
-						speed: 2000
-					})
-				}
+//				}else{
+//					$('body').alert({
+//						isShow: true,
+//						info: '没有足够的积分',
+//						isSlide: true,
+//						speed: 2000
+//					})
+//				}
 				
+			}
+			}else{
+				$('body').alert({
+					isShow: true,
+					info: '请绑定手机号',
+					isSlide: true,
+					speed: 2000
+				})
 			}
 		});
 		$(".xa-exchanged").click(function(){
