--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -266,9 +266,13 @@
 {% endblock %}
 
 {% block js %}
-<script src="/markettools_static/coupon/js/idangerous.swiper.js"></script>
 <script type="text/javascript">
 $(document).ready(function($) {
+    var bodyWidth = window.document.body.clientWidth;
+    var bodyHeight = window.document.body.clientHeight;
+    var containerHeight = bodyHeight - 47;
+    $(".wui-swiper-container").css({'height':containerHeight,'width': '100%' });
+    $(".wui-swiper-slide").css('height', containerHeight );
     $("body").css('overflow-y', 'hidden');
     var myscroll = new iScroll('xa-wrapper',{hScrollbar:false});
     var tabsSwiper = new Swiper('.wui-swiper-container',{
