--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -261,6 +261,7 @@
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btn-abolish{
 		margin-left: 5px;
+		background-color: #e5e5e5;
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btnsubmit{
 		background-color: #ee3715;
