--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -338,7 +338,7 @@
 						微众卡将存到个人中心--微众卡余额查询中，请注意查收！
 					</p>
 					<button class="xa-exchanged">知道了</button>
-					<a href="javascript:void(0)" class="xui-alert-close xa-alert-close">x</a>
+					<a href="javascript:void(0)" class="xui-alert-close xa-alert-close">&times;</a>
 				</div>
 			</div>
 		</div>
