--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -250,7 +250,7 @@
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btn-abolish,.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btnsubmit{
 		display: inline-block;
 		float: left;
-		margin-right: 10px;
+		margin-right: 4%;
 		width: 43%;
 		margin-top: 10px;
 		text-align: center;
@@ -260,7 +260,7 @@
 		font-size: 0.9rem;
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btn-abolish{
-		margin-left: 5px;
+		margin-left: 4%;
 		background-color: #e5e5e5;
 	}
 	.xui-alert-getCode .xui-alert-mask .xui-alert-code .xui-btnsubmit{
