--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -145,7 +145,8 @@
     var group_relation_id = {% if group_relation_id %}'{{group_relation_id}}'{% else %}''{% endif %};
     var product_id = {% if product_id %}'{{product_id}}'{% else %}''{% endif %};
     var settings_domain = '{{settings_domain}}';
-    console.log('settings_domain is:',settings_domain);
+    console.log('settings_domain is:');
+    console.log(settings_domain);
     var product_original_price = 0;
     var product_group_price = 0;
 	$(function(){
@@ -337,6 +338,8 @@
                     var relation_belong_to = data.relation_belong_to;
                     var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
                     window.location.href = data_href;
+                    console.log('data_href is:');
+                    console.log(data_href);
                 },
                 error: function(data) {
                     wuiAlert(data.errMsg);
