--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -162,7 +162,7 @@
             <tr class="xui-product_itle" data-id="${item.id}">
                 <td colspan="7">
                     <div title="${item.name}" class="xui-group_name">
-                        团购名称：<a href="/apps/group/group/?id=${item.id}&related_page_id=${item.related_page_id}">${item.name}</a>
+                        团购名称：${item.name}
                     </div>
                 </td>
             </tr>
@@ -179,8 +179,7 @@
 					   <a
 						class="xui-ellipsisFox"
 						limit="15"
-						href="#"
-						>
+						href="/apps/group/group/?id=${item.id}&related_page_id=${item.related_page_id}">
 							${item.product_name}
 						</a>
 					</div>
