--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -150,13 +150,7 @@
         display: inline-block;
         margin-top: 10px;
     }
-    .xui-i-content-time {
-        border: 1px solid #ff2742;
-        color: #ff2742;
-        margin-bottom: 10px;
-        padding: 2px 0 2px 10px;
-        float:right;
-    }*/
+    */
     button.wui-i-btn-using {
         padding: 15px 15px 15px 15px;
         color: #fff;
@@ -166,12 +160,15 @@
         font-size: 1rem;
         font-family: "黑体";
     }
- /*   .wui-inner-active span.wui-inner-tabTitle {
+    .wui-inner-active span.wui-inner-tabTitle {
         color: #ff2742;
     }
     .wui-swiper .wui-swiper-tabs a.wui-inner-active {
         border-bottom: 4px solid #ff2742;
-    }*/
+    }
+    .wui-swiper .wui-swiper-container {
+        background: none;
+    }
 </style>
 {% endblock %}
 
