--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -145,10 +145,10 @@
     var group_relation_id = {% if group_relation_id %}'{{group_relation_id}}'{% else %}''{% endif %};
     var product_id = {% if product_id %}'{{product_id}}'{% else %}''{% endif %};
     var settings_domain = '{{settings_domain}}';
-    console.log('settings_domain is:');
-    console.log(settings_domain);
     var product_original_price = 0;
     var product_group_price = 0;
+    var order_id = '';
+
 	$(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
@@ -244,6 +244,7 @@
         product_original_price = member_info.product_original_price;
         product_group_price = member_info.product_group_price;
         page_owner_icon = member_info.page_owner_icon;
+        order_id = member_info.order_id;
         if(page_owner_icon != ""){
             $('.wui-i-shop_circle').find('img').attr('src', page_owner_icon);
         }
@@ -446,7 +447,8 @@
                 args: {
                     webapp_owner_id: W.webappOwnerId,
                     group_relation_id: group_relation_id,
-                    member_id: W.member_id
+                    member_id: W.member_id,
+                    order_id: order_id
                 },
                 success: function(data){
                     mask('hide');
