--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -116,7 +116,7 @@
         margin-top: 25px;
         margin-right: 120px;
     }
-    .xui-all_groups_can_join-slide .xui-listInner .wui-i-BtnBox{
+    .xui-all_groups_can_join-slide .xui-listInner .wui-i-BtnBox,.xui-all_groups_can_join-list .wui-i-BtnBox{
         position: absolute;
         top: 25px;
         right: 10px;
@@ -247,7 +247,7 @@
                                     <div style="text-align: right;color: #FF2742;">剩余{remain_hours}小时</div>
                                     <p style="display: inline;">{ group_owner_name }</p>
                                     <div style="display: inline;">{ group_name }</div>
-                                    <a href="{ url }"><button class="wui-i-btn-using wa-using">我要参团</button></a>
+                                    <div class="wui-i-BtnBox"><a href="{ url }"><button class="wui-i-btn-using wa-using">我要参团</button></a></div>
                                 </div>
                                 <div style="width: 50px;display: inline-block;">
                                     <p>团员</p>
