--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -115,7 +115,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/mall2/flash_sale_list/">促销管理</a></li>
-			<li class="active">微众卡兑换</li>
+			<li class="active">微众卡兑换平台</li>
 		</ul>
 	</div>
 {% if card_exchange_dic %}
