--- a/weapp/static_v2/js/view/weixin_menu_link_view/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_link_view/template.html
@@ -18,7 +18,7 @@
     {{/if}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="sign">签到</a></li>
     {{if card_exchange}}
-    <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="cardExchange">微众卡兑换</a></li>
+    <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="cardExchange">兑换平台</a></li>
     {{/if}}
 </ul>
 </script>
