--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -32,6 +32,7 @@
 
 {% block js %}
 <script type="text/javascript">
+	var normal = {% if normal%}1{% else %}0{% endif %};
 	$(document).ready(function() {
 		//密码文本框失焦时仍type为password
 		var $pwd = $('#password');
@@ -81,7 +82,7 @@
                 }),
 		        success: function(data) {
 		        	if(data.code == 200) {
-		        		window.location.href = './?module=market_tool:weizoom_card&model=weizoom_card_change_money&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id='+data.id;
+		        		window.location.href = './?module=market_tool:weizoom_card&model=weizoom_card_change_money&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id='+data.id+'&normal='+normal;
 		        	} else {
 		        		$('body').alert({
 				            isShow: true,
