用户名问题等

--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -307,7 +307,7 @@
                     }
                 }
             }else{
-                if(group_relation_id){
+                if(W.group_status == '团购进行中'){
                     var $powerBtn = $('.wa-power');
                     if(!is_helped){
                         $powerBtn.find('.wa-power-btn-action').html('我要参团');
