--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -18,6 +18,7 @@
         text-align: left;
         border-radius: 8px;
         margin-bottom: 10px;
+        position: relative;
     }
     .wui-swiper-slide .xui-listInner .xui-i-content{
 
