[f_mall_8172][侯庭飞]8173 前台绑定、后台更改绑定手机号时，若号码相同，提醒“该号码已绑定其他微信号”，后台更改绑定手机号后，原号码可重新进行绑定

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -494,7 +494,11 @@
                 	window.location.reload();
                 },
                 error: function(resp) {
-	              	W.showHint('error', '保存失败，请稍后重试！');
+                    if (resp.code === 400) {
+                        W.showHint('error', resp.errMsg);
+                    } else {
+                    W.showHint('error', '保存失败，请稍后重试！');
+                    }
                 },
                 scope: this
 			});
