--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -42,12 +42,52 @@
 				<label class="">团长名称：</label>
 				<input type="text" class="form-control" id="group_leader_name" name="group_leader_name" value="" />
 			</div>
+			<div class="xui-i-item">
+				<label>拼团状态：</label>
+				<select class="" id="status" name="status">
+					<option value="-1">全部</option>
+					<option value="0">未开启</option>
+					<option value="1">进行中</option>
+					<option value="2">已结束</option>
+				</select>
+			</div>
 		</div>
-
+		<div class="xui-i-col">
+			<div class="xui-i-item ml10">
+				<label>活动时间
+				：</label>
+				<input
+					type="text"
+					class="form-control xui-datePicker"
+					id="start_time"
+					name="start_time"
+					style=""
+					value=""
+					readonly="readonly"
+					data-enable-select-time="true"
+					data-validate="require-notempty"
+					data-ui-role="date-picker"
+					data-format="yy-mm-dd HH:MM" />
+				至
+				<input
+					type="text"
+					class="form-control xui-datePicker"
+					id="end_time"
+					name="end_time"
+					value=""
+					readonly="readonly"
+					data-enable-select-time="true"
+					data-validate="require-notempty"
+					data-ui-role="date-picker"
+					data-format="yy-mm-dd HH:MM"
+					data-min-el="#start_time"/>
+			</div>
+		</div>
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a id="export_href" style="display: none ">DownloadXLS</a>
 			</div>
 		</div>
 
@@ -98,7 +138,7 @@
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
 				<td>
-					${item.group_leader}
+					${item.group_leader_name}
 				</td>
 				<td >
 					{{if (item.rest_days <= 3)}}
@@ -176,6 +216,7 @@ $(document).ready(function() {
 		var status = $.trim($('[name="status"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
+
 		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			group_leader_name: group_leader_name,
@@ -194,6 +235,42 @@ $(document).ready(function() {
 		$('[name="start_time"]').val('');
 		$('[name="end_time"]').val('');
 	});
+
+    //export
+    $('.xa-export').click(function(event){
+        W.getLoadingView();
+        var group_leader_name = $.trim($('[name="group_leader_name"]').val());
+        var startTime = $.trim($('[name="start_time"]').val());
+        var endTime = $.trim($('[name="end_time"]').val());
+        var status = $.trim($('[name="status"]').val());
+        var export_id =window.location.search.split('?id=')[1];
+        W.getApi().call({
+            method: 'get',
+            app: 'apps/group',
+            resource: 'group_participances_export',
+            args: {
+                'export_id': export_id,
+                'group_leader_name': group_leader_name,
+                'start_time': startTime,
+                'end_time': endTime,
+                'status':status
+            },
+            success: function(resp){
+                if(resp.code == 200){
+                    $('#export_href').prop({
+                        'href': resp.download_path,
+                        'download': resp.filename
+                    }).get(0).click();
+
+                }
+                console.log("导出成功");
+            },
+            error: function(error){
+                console.log('导出失败');
+            }
+        });
+    });
+
 
 });
 </script>
